# monorepo

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
bazel/depfiles/: requirements_lock.txt
bazel/flags/: .debug.bazelrc  .protoc.bazelrc
bazel/gazelle/: BUILD.bazel  gazelle_python.yml
bazel/toolchains/: go.MODULE.bazel  nodejs.MODULE.bazel  protoc.MODULE.bazel  python.MODULE.bazel  toolchains.MODULE.bazel
docs/: CHEATSHEET.md  README.md
scripts/: README.md
scripts/toolchain_discovery/: .gitignore  BUILD.bazel  pyproject.toml
scripts/toolchain_discovery/src/: BUILD.bazel  __main__.py
scripts/toolchain_discovery/starlark_aspects/: toolchain_discovery.bzl
