# buildifier: disable=modstring
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.defaults(python_version = "3.13")
python.toolchain(python_version = "3.13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.13",
    requirements_lock = "//bazel/depfiles:requirements_lock.txt",
)
use_repo(pip, "pip")

# FIXME(albertocavalcante): Local Toolchains are not working properly. Disabling for now.
# local_runtime_repo = use_repo_rule(
#     "@rules_python//python/local_toolchains:repos.bzl",
#     "local_runtime_repo",
# )
# local_runtime_toolchains_repo = use_repo_rule(
#     "@rules_python//python/local_toolchains:repos.bzl",
#     "local_runtime_toolchains_repo",
# )
# local_runtime_repo(
#     name = "local_python3",
#     interpreter_path = "python3",
#     on_failure = "fail",
# )
# local_runtime_toolchains_repo(
#     name = "local_toolchains",
#     runtimes = ["local_python3"],
# )
