[project]
name = "bazel-toolchain-discovery"
version = "0.1.0"
description = "Bazel toolchain discovery and mirroring utility"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
bazel-toolchain-discovery = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
